<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_relative_1_text"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_relative_2_text"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btnRelativeBackMain"
        android:layout_above="@+id/btnRelativeBackMain"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_relative_5_text"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btnRelativeBackMain"
        android:layout_above="@+id/btnRelativeBackMain"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_relative_6_text"
        />
    <Button
        android:id="@+id/btnRelativeBackMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_relative_back_main_text"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/btnRelativeBackMain"
        android:layout_below="@+id/btnRelativeBackMain"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_relative_7_text"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btnRelativeBackMain"
        android:layout_below="@+id/btnRelativeBackMain"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_relative_8_text"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_relative_3_text"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_relative_4_text"
        />

</RelativeLayout>
