<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    >
    <!--TableLayout以表格的形式排列控件-->
    <!--android:stretchColumns="1"将表格中某一列拉伸-->
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            style="@style/AllTextUniformStyle"
            android:text="@string/tv_table_account"
            />
        <EditText
            android:id="@+id/etTableInputAccount"
            android:layout_height="wrap_content"
            style="@style/AllTextUniformStyle"
            android:hint="@string/et_table_hint_text"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            style="@style/AllTextUniformStyle"
            android:text="@string/tv_table_password"/>
        <EditText
            android:id="@+id/etTableInputPassword"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/AllTextUniformStyle"
            android:hint="@string/tv_table_hint_password"
            />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btnTableLogin"
            android:layout_height="wrap_content"
            android:layout_span="2"
            style="@style/AllTextUniformStyle"
            android:text="@string/btn_table_login"
            />
    </TableRow>

    <Button
        android:id="@+id/btnTableBackMain"
        android:layout_height="wrap_content"
        android:layout_span="2"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_table_back_main_text"
        />

</TableLayout>
