<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/AllTextUniformStyle"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AllTextUniformStyle"
            android:text="@string/btn_main_test_nouse"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            style="@style/AllTextUniformStyle"
            android:text="@string/btn_linear_1_text"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/AllTextUniformStyle"
            android:text="@string/btn_linear_2_text"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            style="@style/AllTextUniformStyle"
            android:text="@string/btn_linear_3_text"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnLinearBackMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AllTextUniformStyle"
        android:text="@string/btn_linear_back_main_text"
        />
</LinearLayout>
